fix: images were overflowing blog's width

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,3 +33,7 @@ kbd {
   padding: 0.2em 0.4em;
   border-radius: 0.5em;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
